finish lab 4 refactor