@@ -1,5 +1,7 @@
 package com.nortexdev.lab4;
 
+import com.nortexdev.lab4.enums.PropertyFieldType;
+import com.nortexdev.lab4.utils.Validators;
 import javafx.scene.Node;
 import javafx.scene.control.Alert;
 import javafx.scene.control.TextArea;
@@ -38,7 +40,7 @@ public class ReflectionManager {
 
 		try {
 			Class<?> clazz = Class.forName(classPath);
-			Object object = clazz.newInstance();
+			Object object = clazz.getDeclaredConstructor().newInstance();
 			Field[] fields = object.getClass().getDeclaredFields();
 
 			currentObject = object;
@@ -48,12 +50,13 @@ public class ReflectionManager {
 				Object value = currentObject.getClass().getMethod(methodName).invoke(currentObject);
 
 				PropertyFieldType fieldType = field.getName().contains("text") ? PropertyFieldType.TextArea : PropertyFieldType.TextField;
+				
 				controller.createPropertyField(field.getName(), String.valueOf(value), fieldType);
 			}
 			controller.appendLog("Created " + currentObject.toString());
 		} catch (ClassNotFoundException | InstantiationException e) {
-			showErrorAlert("Error while creating class", "Please enter a valid class path");
 			controller.clearPropertyFields();
+			showErrorAlert("Error while creating class", "Please enter a valid class path");
 		} catch (InvocationTargetException | NoSuchMethodException | IllegalAccessException e) {
 			controller.clearPropertyFields();
 			throw new RuntimeException(e);
@@ -74,113 +77,87 @@ public class ReflectionManager {
 			Node firstNodeOfHBox = hbox.getChildren().getFirst();
 
 			Class<?> fieldType = fields[i].getType();
+			String name = fields[i].getName();
+			String value = null;
+
 			if (firstNodeOfHBox instanceof TextField textField) {
-				String name = fields[i].getName();
-				String value = textField.getText();
-
-				try {
-					String setterMethodName = "set" + name.substring(0, 1).toUpperCase() + name.substring(1);
-					Method method = currentObject.getClass().getMethod(setterMethodName, fieldType);
-
-					// TYPE VALIDATION
-					if (fieldType.equals(String.class)) {
-						method.invoke(currentObject, value);
-					} else if (fieldType.equals(Integer.class) || fieldType.equals(int.class)) {
-						if (Validators.validateInt(value)) {
-							method.invoke(currentObject, Integer.parseInt(value));
-						} else {
-							controller.appendLog("Invalid value for " + name + " (int)");
-							i++;
-							continue;
-						}
-					} else if (fieldType.equals(Double.class) || fieldType.equals(double.class)) {
-						if (Validators.validateDouble(value)) {
-							method.invoke(currentObject, Double.parseDouble(value));
-						} else {
-							controller.appendLog("Invalid value for " + name + " (double)");
-							i++;
-							continue;
-						}
-					} else if (fieldType.equals(Boolean.class) || fieldType.equals(boolean.class)) {
-						if (value.equals("true") || value.equals("false")) {
-
-							method.invoke(currentObject, Boolean.parseBoolean(value));
-						} else {
-							controller.appendLog("Invalid value for " + name + " (boolean)");
-							i++;
-							continue;
-						}
-					} else if (fieldType.equals(Character.class) || fieldType.equals(char.class)) {
-						if (value.length() == 1) {
-							method.invoke(currentObject, value.charAt(0));
-						} else {
-							controller.appendLog("Invalid value for " + name + " (char)");
-							i++;
-							continue;
-						}
-					} else if (fieldType.equals(Long.class) || fieldType.equals(long.class)) {
-						if (Validators.validateLong(value)) {
-							method.invoke(currentObject, Long.parseLong(value));
-						} else {
-							controller.appendLog("Invalid value for " + name + " (long)");
-							i++;
-							continue;
-						}
-					} else if (fieldType.equals(Float.class) || fieldType.equals(float.class)) {
-						if (Validators.validateFloat(value)) {
-							method.invoke(currentObject, Float.parseFloat(value));
-						} else {
-							controller.appendLog("Invalid value for " + name + " (float)");
-							i++;
-							continue;
-						}
-					} else if (fieldType.equals(Short.class) || fieldType.equals(short.class)) {
-						if (Validators.validateShort(value)) {
-							method.invoke(currentObject, Short.parseShort(value));
-						} else {
-							controller.appendLog("Invalid value for " + name + " (short)");
-							i++;
-							continue;
-						}
-					} else if (fieldType.equals(Byte.class) || fieldType.equals(byte.class)) {
-						if (Validators.validateBytes(value)) {
-							method.invoke(currentObject, Byte.parseByte(value));
-						} else {
-							controller.appendLog("Invalid value for " + name + " (byte)");
-							i++;
-							continue;
-						}
-					} else {
-						controller.appendLog("Invalid value for " + name + " (unknown type)");
-						i++;
-						continue;
-					}
-					// END TYPE VALIDATION
-				} catch (NoSuchMethodException | IllegalAccessException | InvocationTargetException e) {
-					e.printStackTrace();
-				}
-				i++;
+				value = textField.getText();
 			} else if (firstNodeOfHBox instanceof TextArea textArea) {
-				String name = fields[i].getName();
-				String value = textArea.getText();
+				value = textArea.getText();
+			}
+			//	                       set    T                                    est
+			String setterMethodName = "set" + name.substring(0, 1).toUpperCase() + name.substring(1);
+
+			try {
+				Method method = currentObject.getClass().getMethod(setterMethodName, fieldType);
 
 				try {
-					String setterMethodName = "set" + name.substring(0, 1).toUpperCase() + name.substring(1);
-					Method method = currentObject.getClass().getMethod(setterMethodName, fieldType);
-					// Text area will only ever handle string types.
-					if (fieldType.equals(String.class)) {
-						method.invoke(currentObject, value);
-					} else {
-						controller.appendLog("Invalid value for " + name + " (String)");
-						i++;
-						continue;
-					}
-				} catch (NoSuchMethodException | IllegalAccessException | InvocationTargetException e) {
-					e.printStackTrace();
+					trySetProperty(fieldType, method, name, value);
+				} catch (InvalidValueException | InvocationTargetException | IllegalAccessException err) {
+					controller.appendLog(err.getMessage());
+					i++;
+					continue;
 				}
-				i++;
+			} catch (NoSuchMethodException e) {
+				e.printStackTrace();
+			}
+			i++;
+		}
+
+		controller.appendLog("Set " + currentObject.toString());
+	}
+
+	public void trySetProperty(Class<?> fieldType, Method method, String name, String stringifiedValue) throws InvalidValueException, InvocationTargetException, IllegalAccessException {
+		if (fieldType.equals(String.class)) {
+			method.invoke(currentObject, stringifiedValue);
+		} else if (fieldType.equals(Integer.class) || fieldType.equals(int.class)) {
+			if (Validators.validateInt(stringifiedValue)) {
+				method.invoke(currentObject, Integer.parseInt(stringifiedValue));
+			} else {
+				throw new InvalidValueException("Invalid value for " + name + " (int)");
+			}
+		} else if (fieldType.equals(Double.class) || fieldType.equals(double.class)) {
+			if (Validators.validateDouble(stringifiedValue)) {
+				method.invoke(currentObject, Double.parseDouble(stringifiedValue));
+			} else {
+				throw new InvalidValueException("Invalid value for " + name + " (double)");
+			}
+		} else if (fieldType.equals(Boolean.class) || fieldType.equals(boolean.class)) {
+			if (stringifiedValue.equals("true") || stringifiedValue.equals("false")) {
+				method.invoke(currentObject, Boolean.parseBoolean(stringifiedValue));
+			} else {
+				throw new InvalidValueException("Invalid value for " + name + " (boolean)");
+			}
+		} else if (fieldType.equals(Character.class) || fieldType.equals(char.class)) {
+			if (stringifiedValue.length() == 1) {
+				method.invoke(currentObject, stringifiedValue.charAt(0));
+			} else {
+				throw new InvalidValueException("Invalid value for " + name + " (char)");
+			}
+		} else if (fieldType.equals(Long.class) || fieldType.equals(long.class)) {
+			if (Validators.validateLong(stringifiedValue)) {
+				method.invoke(currentObject, Long.parseLong(stringifiedValue));
+			} else {
+				throw new InvalidValueException("Invalid value for " + name + " (long)");
+			}
+		} else if (fieldType.equals(Float.class) || fieldType.equals(float.class)) {
+			if (Validators.validateFloat(stringifiedValue)) {
+				method.invoke(currentObject, Float.parseFloat(stringifiedValue));
+			} else {
+				throw new InvalidValueException("Invalid value for " + name + " (float)");
+			}
+		} else if (fieldType.equals(Short.class) || fieldType.equals(short.class)) {
+			if (Validators.validateShort(stringifiedValue)) {
+				method.invoke(currentObject, Short.parseShort(stringifiedValue));
+			} else {
+				throw new InvalidValueException("Invalid value for " + name + " (short)");
+			}
+		} else if (fieldType.equals(Byte.class) || fieldType.equals(byte.class)) {
+			if (Validators.validateBytes(stringifiedValue)) {
+				method.invoke(currentObject, Byte.parseByte(stringifiedValue));
+			} else {
+				throw new InvalidValueException("Invalid value for " + name + " (byte)");
 			}
 		}
-		controller.appendLog("Set " + currentObject.toString());
 	}
 }
